Update lists at 20240914-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -651,6 +651,7 @@ allow 195.176.3.19;
 allow 195.176.3.20;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.246.230.100;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1511,8 +1512,10 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.128.157.43;
 allow 45.128.157.46;
 allow 45.129.84.246;
+allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1803,4 +1806,5 @@ allow 95.164.5.105;
 allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
+allow 96.66.15.152;
 allow 98.128.173.33;
