--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -651,6 +651,7 @@ set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
+set_real_ip_from 195.246.230.100;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -1511,8 +1512,10 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
+set_real_ip_from 45.128.157.43;
 set_real_ip_from 45.128.157.46;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1803,4 +1806,5 @@ set_real_ip_from 95.164.5.105;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.126.98.146;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
