--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -140,7 +140,6 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.57;
 allow 144.24.197.112;
-allow 146.0.74.196;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.121.124;
@@ -203,6 +202,7 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
+allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.124.221.200;
 allow 176.126.253.190;
@@ -499,7 +499,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.232;
 allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
@@ -961,9 +960,8 @@ allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c00::f03c:93ff:fe2b:34f6;
+allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
-allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -1517,7 +1515,6 @@ allow 45.128.133.242;
 allow 45.128.157.43;
 allow 45.128.157.46;
 allow 45.129.84.246;
-allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1568,8 +1565,6 @@ allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
 allow 45.79.144.222;
-allow 45.79.177.21;
-allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
@@ -1627,7 +1622,6 @@ allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.183;
 allow 5.255.118.244;
-allow 5.255.120.205;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
