--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,9 +128,8 @@ deny 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 deny 2407:3640:2207:8882::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c00::f03c:93ff:fe2b:34f6;
+deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
-deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
