Update lists at 20240915-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -194,7 +194,7 @@ allow 171.25.193.80;
 allow 172.104.164.133;
 allow 172.104.182.84;
 allow 172.105.161.162;
-allow 172.232.164.52;
+allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.139;
@@ -289,6 +289,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -962,7 +963,7 @@ allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
-allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1620,7 +1621,6 @@ allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.183;
 allow 5.255.118.244;
 allow 5.255.123.158;
 allow 5.255.123.164;
@@ -1702,7 +1702,6 @@ allow 8.218.9.41;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
