--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -122,6 +121,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 13.126.132.195;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -289,6 +289,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -541,7 +542,6 @@ allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
-allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
 allow 188.214.104.21;
@@ -949,6 +949,8 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2406:da1a:888:d200:3daf:64c9:d771:fbab;
+allow 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1473,6 +1475,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
@@ -1489,6 +1492,7 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
+allow 3.108.196.136;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
@@ -1611,6 +1615,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1755,6 +1760,7 @@ allow 91.208.75.4;
 allow 91.210.107.207;
 allow 91.210.59.57;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
