--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -289,6 +289,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -545,6 +546,7 @@ set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.172.229.15;
 set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.244.106.81;
+set_real_ip_from 188.253.7.106;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
@@ -948,6 +950,7 @@ set_real_ip_from 2400:d321:2195:2012::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2406:da1a:888:d200:3daf:64c9:d771:fbab;
 set_real_ip_from 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 set_real_ip_from 2407:3640:2207:8882::1;
@@ -1156,7 +1159,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
@@ -1230,7 +1232,6 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
-set_real_ip_from 2a05:541:152:4::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1515,7 +1516,6 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.128.157.43;
 set_real_ip_from 45.128.157.46;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1715,7 +1715,6 @@ set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
-set_real_ip_from 86.104.194.13;
 set_real_ip_from 86.104.73.167;
 set_real_ip_from 86.205.5.107;
 set_real_ip_from 87.118.110.27;
@@ -1732,7 +1731,6 @@ set_real_ip_from 89.147.110.202;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
-set_real_ip_from 89.185.82.71;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.213.174.248;
@@ -1756,7 +1754,6 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
-set_real_ip_from 91.210.107.207;
 set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.39;
