Update lists at 20240916-1200

--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -126,7 +126,6 @@ set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2406:da1a:888:d200:3daf:64c9:d771:fbab;
-set_real_ip_from 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -325,6 +324,7 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
+set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
