--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -27,6 +27,7 @@ allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
+allow 104.244.75.108;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
@@ -152,6 +153,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
@@ -159,6 +161,7 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 155.138.161.171;
+allow 155.94.192.114;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.216.18.62;
@@ -647,7 +650,6 @@ allow 195.176.3.19;
 allow 195.176.3.20;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.246.230.100;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -661,6 +663,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.50.215;
+allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
 allow 198.98.52.24;
@@ -812,6 +815,106 @@ allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
+allow 204.8.96.100;
+allow 204.8.96.101;
+allow 204.8.96.102;
+allow 204.8.96.103;
+allow 204.8.96.104;
+allow 204.8.96.105;
+allow 204.8.96.106;
+allow 204.8.96.107;
+allow 204.8.96.108;
+allow 204.8.96.109;
+allow 204.8.96.110;
+allow 204.8.96.111;
+allow 204.8.96.112;
+allow 204.8.96.113;
+allow 204.8.96.114;
+allow 204.8.96.115;
+allow 204.8.96.116;
+allow 204.8.96.117;
+allow 204.8.96.118;
+allow 204.8.96.119;
+allow 204.8.96.120;
+allow 204.8.96.121;
+allow 204.8.96.122;
+allow 204.8.96.123;
+allow 204.8.96.140;
+allow 204.8.96.141;
+allow 204.8.96.142;
+allow 204.8.96.143;
+allow 204.8.96.144;
+allow 204.8.96.145;
+allow 204.8.96.146;
+allow 204.8.96.147;
+allow 204.8.96.148;
+allow 204.8.96.149;
+allow 204.8.96.150;
+allow 204.8.96.151;
+allow 204.8.96.152;
+allow 204.8.96.153;
+allow 204.8.96.154;
+allow 204.8.96.155;
+allow 204.8.96.156;
+allow 204.8.96.157;
+allow 204.8.96.158;
+allow 204.8.96.159;
+allow 204.8.96.160;
+allow 204.8.96.161;
+allow 204.8.96.162;
+allow 204.8.96.163;
+allow 204.8.96.164;
+allow 204.8.96.165;
+allow 204.8.96.166;
+allow 204.8.96.167;
+allow 204.8.96.168;
+allow 204.8.96.169;
+allow 204.8.96.170;
+allow 204.8.96.171;
+allow 204.8.96.172;
+allow 204.8.96.173;
+allow 204.8.96.174;
+allow 204.8.96.175;
+allow 204.8.96.176;
+allow 204.8.96.177;
+allow 204.8.96.178;
+allow 204.8.96.179;
+allow 204.8.96.180;
+allow 204.8.96.181;
+allow 204.8.96.182;
+allow 204.8.96.183;
+allow 204.8.96.184;
+allow 204.8.96.185;
+allow 204.8.96.186;
+allow 204.8.96.187;
+allow 204.8.96.188;
+allow 204.8.96.189;
+allow 204.8.96.64;
+allow 204.8.96.65;
+allow 204.8.96.66;
+allow 204.8.96.67;
+allow 204.8.96.68;
+allow 204.8.96.69;
+allow 204.8.96.70;
+allow 204.8.96.71;
+allow 204.8.96.72;
+allow 204.8.96.73;
+allow 204.8.96.74;
+allow 204.8.96.75;
+allow 204.8.96.76;
+allow 204.8.96.77;
+allow 204.8.96.78;
+allow 204.8.96.79;
+allow 204.8.96.80;
+allow 204.8.96.81;
+allow 204.8.96.82;
+allow 204.8.96.83;
+allow 204.8.96.84;
+allow 204.8.96.85;
+allow 204.8.96.86;
+allow 204.8.96.87;
+allow 204.8.96.88;
+allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -994,6 +1097,7 @@ allow 2605:6400:10:3f9:c161:156a:847d:1a1d;
 allow 2605:6400:10:3f9:f741:57f7:8f88:b2bd;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
+allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:7ce:1211:2284:56a3:1121;
 allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
@@ -1124,6 +1228,106 @@ allow 2620:18c:0:192::227;
 allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
 allow 2620:18c:0:192::230;
+allow 2620:7:6001::101;
+allow 2620:7:6001::102;
+allow 2620:7:6001::103;
+allow 2620:7:6001::104;
+allow 2620:7:6001::105;
+allow 2620:7:6001::106;
+allow 2620:7:6001::107;
+allow 2620:7:6001::108;
+allow 2620:7:6001::109;
+allow 2620:7:6001::110;
+allow 2620:7:6001::111;
+allow 2620:7:6001::112;
+allow 2620:7:6001::113;
+allow 2620:7:6001::114;
+allow 2620:7:6001::115;
+allow 2620:7:6001::116;
+allow 2620:7:6001::117;
+allow 2620:7:6001::118;
+allow 2620:7:6001::119;
+allow 2620:7:6001::120;
+allow 2620:7:6001::121;
+allow 2620:7:6001::122;
+allow 2620:7:6001::123;
+allow 2620:7:6001::140;
+allow 2620:7:6001::141;
+allow 2620:7:6001::142;
+allow 2620:7:6001::143;
+allow 2620:7:6001::144;
+allow 2620:7:6001::145;
+allow 2620:7:6001::146;
+allow 2620:7:6001::147;
+allow 2620:7:6001::148;
+allow 2620:7:6001::149;
+allow 2620:7:6001::150;
+allow 2620:7:6001::151;
+allow 2620:7:6001::152;
+allow 2620:7:6001::153;
+allow 2620:7:6001::154;
+allow 2620:7:6001::155;
+allow 2620:7:6001::156;
+allow 2620:7:6001::157;
+allow 2620:7:6001::158;
+allow 2620:7:6001::159;
+allow 2620:7:6001::160;
+allow 2620:7:6001::161;
+allow 2620:7:6001::162;
+allow 2620:7:6001::163;
+allow 2620:7:6001::164;
+allow 2620:7:6001::165;
+allow 2620:7:6001::166;
+allow 2620:7:6001::167;
+allow 2620:7:6001::168;
+allow 2620:7:6001::169;
+allow 2620:7:6001::170;
+allow 2620:7:6001::171;
+allow 2620:7:6001::172;
+allow 2620:7:6001::173;
+allow 2620:7:6001::174;
+allow 2620:7:6001::175;
+allow 2620:7:6001::176;
+allow 2620:7:6001::177;
+allow 2620:7:6001::178;
+allow 2620:7:6001::179;
+allow 2620:7:6001::180;
+allow 2620:7:6001::181;
+allow 2620:7:6001::182;
+allow 2620:7:6001::183;
+allow 2620:7:6001::184;
+allow 2620:7:6001::185;
+allow 2620:7:6001::186;
+allow 2620:7:6001::187;
+allow 2620:7:6001::188;
+allow 2620:7:6001::189;
+allow 2620:7:6001::e664;
+allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e641;
+allow 2620:7:6001::ffff:c759:e642;
+allow 2620:7:6001::ffff:c759:e643;
+allow 2620:7:6001::ffff:c759:e644;
+allow 2620:7:6001::ffff:c759:e645;
+allow 2620:7:6001::ffff:c759:e646;
+allow 2620:7:6001::ffff:c759:e647;
+allow 2620:7:6001::ffff:c759:e648;
+allow 2620:7:6001::ffff:c759:e649;
+allow 2620:7:6001::ffff:c759:e64a;
+allow 2620:7:6001::ffff:c759:e64b;
+allow 2620:7:6001::ffff:c759:e64c;
+allow 2620:7:6001::ffff:c759:e64d;
+allow 2620:7:6001::ffff:c759:e64e;
+allow 2620:7:6001::ffff:c759:e64f;
+allow 2620:7:6001::ffff:c759:e650;
+allow 2620:7:6001::ffff:c759:e651;
+allow 2620:7:6001::ffff:c759:e652;
+allow 2620:7:6001::ffff:c759:e653;
+allow 2620:7:6001::ffff:c759:e654;
+allow 2620:7:6001::ffff:c759:e655;
+allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
+allow 2620:7:6001::ffff:c759:e658;
+allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
@@ -1222,6 +1426,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
@@ -1499,7 +1704,6 @@ allow 45.128.133.242;
 allow 45.128.157.43;
 allow 45.128.157.46;
 allow 45.129.84.246;
-allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
