--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -27,6 +27,7 @@ set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
+set_real_ip_from 104.244.75.108;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
 set_real_ip_from 104.244.77.208;
@@ -152,6 +153,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
 set_real_ip_from 154.213.185.183;
 set_real_ip_from 154.213.185.185;
@@ -159,6 +161,7 @@ set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 155.138.161.171;
+set_real_ip_from 155.94.192.114;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.216.18.62;
@@ -647,7 +650,6 @@ set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
-set_real_ip_from 195.246.230.100;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -661,6 +663,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
+set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
 set_real_ip_from 198.98.52.24;
@@ -812,6 +815,106 @@ set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
+set_real_ip_from 204.8.96.100;
+set_real_ip_from 204.8.96.101;
+set_real_ip_from 204.8.96.102;
+set_real_ip_from 204.8.96.103;
+set_real_ip_from 204.8.96.104;
+set_real_ip_from 204.8.96.105;
+set_real_ip_from 204.8.96.106;
+set_real_ip_from 204.8.96.107;
+set_real_ip_from 204.8.96.108;
+set_real_ip_from 204.8.96.109;
+set_real_ip_from 204.8.96.110;
+set_real_ip_from 204.8.96.111;
+set_real_ip_from 204.8.96.112;
+set_real_ip_from 204.8.96.113;
+set_real_ip_from 204.8.96.114;
+set_real_ip_from 204.8.96.115;
+set_real_ip_from 204.8.96.116;
+set_real_ip_from 204.8.96.117;
+set_real_ip_from 204.8.96.118;
+set_real_ip_from 204.8.96.119;
+set_real_ip_from 204.8.96.120;
+set_real_ip_from 204.8.96.121;
+set_real_ip_from 204.8.96.122;
+set_real_ip_from 204.8.96.123;
+set_real_ip_from 204.8.96.140;
+set_real_ip_from 204.8.96.141;
+set_real_ip_from 204.8.96.142;
+set_real_ip_from 204.8.96.143;
+set_real_ip_from 204.8.96.144;
+set_real_ip_from 204.8.96.145;
+set_real_ip_from 204.8.96.146;
+set_real_ip_from 204.8.96.147;
+set_real_ip_from 204.8.96.148;
+set_real_ip_from 204.8.96.149;
+set_real_ip_from 204.8.96.150;
+set_real_ip_from 204.8.96.151;
+set_real_ip_from 204.8.96.152;
+set_real_ip_from 204.8.96.153;
+set_real_ip_from 204.8.96.154;
+set_real_ip_from 204.8.96.155;
+set_real_ip_from 204.8.96.156;
+set_real_ip_from 204.8.96.157;
+set_real_ip_from 204.8.96.158;
+set_real_ip_from 204.8.96.159;
+set_real_ip_from 204.8.96.160;
+set_real_ip_from 204.8.96.161;
+set_real_ip_from 204.8.96.162;
+set_real_ip_from 204.8.96.163;
+set_real_ip_from 204.8.96.164;
+set_real_ip_from 204.8.96.165;
+set_real_ip_from 204.8.96.166;
+set_real_ip_from 204.8.96.167;
+set_real_ip_from 204.8.96.168;
+set_real_ip_from 204.8.96.169;
+set_real_ip_from 204.8.96.170;
+set_real_ip_from 204.8.96.171;
+set_real_ip_from 204.8.96.172;
+set_real_ip_from 204.8.96.173;
+set_real_ip_from 204.8.96.174;
+set_real_ip_from 204.8.96.175;
+set_real_ip_from 204.8.96.176;
+set_real_ip_from 204.8.96.177;
+set_real_ip_from 204.8.96.178;
+set_real_ip_from 204.8.96.179;
+set_real_ip_from 204.8.96.180;
+set_real_ip_from 204.8.96.181;
+set_real_ip_from 204.8.96.182;
+set_real_ip_from 204.8.96.183;
+set_real_ip_from 204.8.96.184;
+set_real_ip_from 204.8.96.185;
+set_real_ip_from 204.8.96.186;
+set_real_ip_from 204.8.96.187;
+set_real_ip_from 204.8.96.188;
+set_real_ip_from 204.8.96.189;
+set_real_ip_from 204.8.96.64;
+set_real_ip_from 204.8.96.65;
+set_real_ip_from 204.8.96.66;
+set_real_ip_from 204.8.96.67;
+set_real_ip_from 204.8.96.68;
+set_real_ip_from 204.8.96.69;
+set_real_ip_from 204.8.96.70;
+set_real_ip_from 204.8.96.71;
+set_real_ip_from 204.8.96.72;
+set_real_ip_from 204.8.96.73;
+set_real_ip_from 204.8.96.74;
+set_real_ip_from 204.8.96.75;
+set_real_ip_from 204.8.96.76;
+set_real_ip_from 204.8.96.77;
+set_real_ip_from 204.8.96.78;
+set_real_ip_from 204.8.96.79;
+set_real_ip_from 204.8.96.80;
+set_real_ip_from 204.8.96.81;
+set_real_ip_from 204.8.96.82;
+set_real_ip_from 204.8.96.83;
+set_real_ip_from 204.8.96.84;
+set_real_ip_from 204.8.96.85;
+set_real_ip_from 204.8.96.86;
+set_real_ip_from 204.8.96.87;
+set_real_ip_from 204.8.96.88;
+set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
@@ -994,6 +1097,7 @@ set_real_ip_from 2605:6400:10:3f9:c161:156a:847d:1a1d;
 set_real_ip_from 2605:6400:10:3f9:f741:57f7:8f88:b2bd;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
+set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:7ce:1211:2284:56a3:1121;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
@@ -1124,6 +1228,106 @@ set_real_ip_from 2620:18c:0:192::227;
 set_real_ip_from 2620:18c:0:192::228;
 set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:18c:0:192::230;
+set_real_ip_from 2620:7:6001::101;
+set_real_ip_from 2620:7:6001::102;
+set_real_ip_from 2620:7:6001::103;
+set_real_ip_from 2620:7:6001::104;
+set_real_ip_from 2620:7:6001::105;
+set_real_ip_from 2620:7:6001::106;
+set_real_ip_from 2620:7:6001::107;
+set_real_ip_from 2620:7:6001::108;
+set_real_ip_from 2620:7:6001::109;
+set_real_ip_from 2620:7:6001::110;
+set_real_ip_from 2620:7:6001::111;
+set_real_ip_from 2620:7:6001::112;
+set_real_ip_from 2620:7:6001::113;
+set_real_ip_from 2620:7:6001::114;
+set_real_ip_from 2620:7:6001::115;
+set_real_ip_from 2620:7:6001::116;
+set_real_ip_from 2620:7:6001::117;
+set_real_ip_from 2620:7:6001::118;
+set_real_ip_from 2620:7:6001::119;
+set_real_ip_from 2620:7:6001::120;
+set_real_ip_from 2620:7:6001::121;
+set_real_ip_from 2620:7:6001::122;
+set_real_ip_from 2620:7:6001::123;
+set_real_ip_from 2620:7:6001::140;
+set_real_ip_from 2620:7:6001::141;
+set_real_ip_from 2620:7:6001::142;
+set_real_ip_from 2620:7:6001::143;
+set_real_ip_from 2620:7:6001::144;
+set_real_ip_from 2620:7:6001::145;
+set_real_ip_from 2620:7:6001::146;
+set_real_ip_from 2620:7:6001::147;
+set_real_ip_from 2620:7:6001::148;
+set_real_ip_from 2620:7:6001::149;
+set_real_ip_from 2620:7:6001::150;
+set_real_ip_from 2620:7:6001::151;
+set_real_ip_from 2620:7:6001::152;
+set_real_ip_from 2620:7:6001::153;
+set_real_ip_from 2620:7:6001::154;
+set_real_ip_from 2620:7:6001::155;
+set_real_ip_from 2620:7:6001::156;
+set_real_ip_from 2620:7:6001::157;
+set_real_ip_from 2620:7:6001::158;
+set_real_ip_from 2620:7:6001::159;
+set_real_ip_from 2620:7:6001::160;
+set_real_ip_from 2620:7:6001::161;
+set_real_ip_from 2620:7:6001::162;
+set_real_ip_from 2620:7:6001::163;
+set_real_ip_from 2620:7:6001::164;
+set_real_ip_from 2620:7:6001::165;
+set_real_ip_from 2620:7:6001::166;
+set_real_ip_from 2620:7:6001::167;
+set_real_ip_from 2620:7:6001::168;
+set_real_ip_from 2620:7:6001::169;
+set_real_ip_from 2620:7:6001::170;
+set_real_ip_from 2620:7:6001::171;
+set_real_ip_from 2620:7:6001::172;
+set_real_ip_from 2620:7:6001::173;
+set_real_ip_from 2620:7:6001::174;
+set_real_ip_from 2620:7:6001::175;
+set_real_ip_from 2620:7:6001::176;
+set_real_ip_from 2620:7:6001::177;
+set_real_ip_from 2620:7:6001::178;
+set_real_ip_from 2620:7:6001::179;
+set_real_ip_from 2620:7:6001::180;
+set_real_ip_from 2620:7:6001::181;
+set_real_ip_from 2620:7:6001::182;
+set_real_ip_from 2620:7:6001::183;
+set_real_ip_from 2620:7:6001::184;
+set_real_ip_from 2620:7:6001::185;
+set_real_ip_from 2620:7:6001::186;
+set_real_ip_from 2620:7:6001::187;
+set_real_ip_from 2620:7:6001::188;
+set_real_ip_from 2620:7:6001::189;
+set_real_ip_from 2620:7:6001::e664;
+set_real_ip_from 2620:7:6001::ffff:c759:e640;
+set_real_ip_from 2620:7:6001::ffff:c759:e641;
+set_real_ip_from 2620:7:6001::ffff:c759:e642;
+set_real_ip_from 2620:7:6001::ffff:c759:e643;
+set_real_ip_from 2620:7:6001::ffff:c759:e644;
+set_real_ip_from 2620:7:6001::ffff:c759:e645;
+set_real_ip_from 2620:7:6001::ffff:c759:e646;
+set_real_ip_from 2620:7:6001::ffff:c759:e647;
+set_real_ip_from 2620:7:6001::ffff:c759:e648;
+set_real_ip_from 2620:7:6001::ffff:c759:e649;
+set_real_ip_from 2620:7:6001::ffff:c759:e64a;
+set_real_ip_from 2620:7:6001::ffff:c759:e64b;
+set_real_ip_from 2620:7:6001::ffff:c759:e64c;
+set_real_ip_from 2620:7:6001::ffff:c759:e64d;
+set_real_ip_from 2620:7:6001::ffff:c759:e64e;
+set_real_ip_from 2620:7:6001::ffff:c759:e64f;
+set_real_ip_from 2620:7:6001::ffff:c759:e650;
+set_real_ip_from 2620:7:6001::ffff:c759:e651;
+set_real_ip_from 2620:7:6001::ffff:c759:e652;
+set_real_ip_from 2620:7:6001::ffff:c759:e653;
+set_real_ip_from 2620:7:6001::ffff:c759:e654;
+set_real_ip_from 2620:7:6001::ffff:c759:e655;
+set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
+set_real_ip_from 2620:7:6001::ffff:c759:e658;
+set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -1222,6 +1426,7 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
+set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
@@ -1499,7 +1704,6 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.128.157.43;
 set_real_ip_from 45.128.157.46;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
