--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -483,6 +483,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:108:a34f::1;
