Update lists at 20240919-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -414,6 +414,7 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:c5cd::1;
