--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -414,6 +414,7 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:da00:f23d:8f00::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:c5cd::1;
