--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -28,7 +28,6 @@ deny 104.244.73.193;
 deny 104.244.73.43;
 deny 104.244.74.23;
 deny 104.244.74.97;
-deny 104.244.75.108;
 deny 104.244.75.74;
 deny 104.244.77.192;
 deny 104.244.77.208;
@@ -1361,6 +1360,7 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:da00:f23d:8f00::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:c5cd::1;
