Update lists at 20240921-0300

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -122,6 +122,7 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
+allow 13.126.132.195;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.162.249.209;
@@ -943,6 +944,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 27.255.75.198;
+allow 3.108.196.136;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
@@ -965,6 +967,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1159,6 +1162,7 @@ allow 8.218.9.41;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
