--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -119,7 +118,6 @@ allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
-allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 13.126.132.195;
@@ -218,6 +216,7 @@ allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.209;
+allow 178.175.148.245;
 allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -249,6 +248,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.57.64;
@@ -1060,7 +1060,6 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2406:da1a:888:d200:3daf:64c9:d771:fbab;
 allow 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
@@ -1357,6 +1356,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:88::b2ec;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
@@ -1649,6 +1649,9 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:16c2:500:2de::dea9;
+allow 2a0c:16c2:500:2df::cb37;
+allow 2a0c:16c2:500:2e0::54d9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
@@ -1709,7 +1712,6 @@ allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
-allow 3.108.196.136;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
@@ -1732,6 +1734,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1920,6 +1924,9 @@ allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 82.115.6.76;
+allow 82.115.6.77;
+allow 82.115.6.78;
 allow 82.118.242.62;
 allow 82.153.138.119;
 allow 8.218.9.41;
