--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.163.218.11;
 deny 103.164.54.199;
-deny 103.174.253.222;
 deny 103.186.0.144;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -119,7 +118,6 @@ deny 118.163.74.160;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.127.180.156;
-deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 13.126.132.195;
@@ -218,6 +216,7 @@ deny 178.17.174.164;
 deny 178.175.131.141;
 deny 178.175.142.26;
 deny 178.175.148.209;
+deny 178.175.148.245;
 deny 178.175.148.246;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -249,6 +248,7 @@ deny 185.100.87.166;
 deny 185.100.87.174;
 deny 185.100.87.253;
 deny 185.100.87.41;
+deny 185.10.16.41;
 deny 185.106.102.102;
 deny 185.106.94.195;
 deny 185.107.57.64;
@@ -1060,7 +1060,6 @@ deny 2400:d321:2195:2012::1;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
-deny 2406:da1a:888:d200:3daf:64c9:d771:fbab;
 deny 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 deny 2407:3640:2207:8882::1;
 deny 24.240.72.170;
@@ -1357,6 +1356,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:88::b2ec;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:da00:f23d:8f00::1;
@@ -1649,6 +1649,9 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:16c2:500:2de::dea9;
+deny 2a0c:16c2:500:2df::cb37;
+deny 2a0c:16c2:500:2e0::54d9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
@@ -1709,7 +1712,6 @@ deny 2a12:a800:2:1:45:138:16:213;
 deny 2a12:a800:2:1:45:141:215:116;
 deny 2a12:bec4:11d3:de9f::1;
 deny 2a12:d8c0:109a:9001::7;
-deny 3.108.196.136;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
@@ -1732,6 +1734,8 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
+deny 45.129.84.247;
+deny 45.129.84.248;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1920,6 +1924,9 @@ deny 80.82.78.14;
 deny 80.94.92.106;
 deny 81.16.33.42;
 deny 81.17.28.95;
+deny 82.115.6.76;
+deny 82.115.6.77;
+deny 82.115.6.78;
 deny 82.118.242.62;
 deny 82.153.138.119;
 deny 8.218.9.41;
