--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -195,10 +194,6 @@ allow 172.104.176.218;
 allow 172.104.182.84;
 allow 172.105.161.162;
 allow 172.234.228.174;
-allow 172.81.131.110;
-allow 172.81.131.111;
-allow 172.81.131.139;
-allow 172.81.131.156;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -210,6 +205,7 @@ allow 176.58.121.177;
 allow 176.97.114.182;
 allow 176.97.114.202;
 allow 178.17.170.144;
+allow 178.17.170.215;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -648,6 +644,7 @@ allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
+allow 193.233.48.43;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.38.17;
@@ -717,6 +714,7 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
+allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
@@ -1071,6 +1069,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1358,6 +1357,7 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:88::b2ec;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:99::ecd2;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
@@ -1726,11 +1726,9 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 45.11.59.28;
-allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1791,7 +1789,6 @@ allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
 allow 45.94.31.180;
-allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
 allow 45.95.169.224;
@@ -1806,6 +1803,7 @@ allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.29.238.177;
 allow 46.38.255.27;
 allow 47.243.99.161;
 allow 47.76.187.86;
@@ -1865,6 +1863,7 @@ allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
+allow 54.36.108.162;
 allow 54.36.209.253;
 allow 54.36.209.254;
 allow 5.45.102.93;
@@ -1880,6 +1879,7 @@ allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.5.42.204;
 allow 72.5.42.207;
@@ -1925,6 +1925,7 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
