--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -15,6 +15,7 @@ set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
+set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
@@ -126,6 +127,7 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
@@ -412,6 +414,7 @@ set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:88::b2ec;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
+set_real_ip_from 2a00:1dc0:caff:99::ecd2;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:da00:f23d:8f00::1;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
