Update lists at 20240922-1800

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.163.218.11;
 deny 103.164.54.199;
-deny 103.174.253.222;
 deny 103.196.37.111;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -183,6 +182,7 @@ deny 163.5.143.76;
 deny 164.132.172.209;
 deny 165.73.242.163;
 deny 166.70.207.2;
+deny 168.100.10.202;
 deny 171.25.193.20;
 deny 171.25.193.234;
 deny 171.25.193.235;
@@ -1368,6 +1368,7 @@ deny 2a00:1dc0:caff:99::ecd2;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:da00:f23d:8f00::1;
 deny 2a01:4262:1ab:ffff::133;
+deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1676,8 +1677,6 @@ deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
-deny 2a0f:5707:aaef:282::1;
-deny 2a0f:5707:aaef:390::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1738,7 +1737,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.249;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1781,8 +1779,7 @@ deny 45.141.215.97;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.15.157.177;
-deny 45.155.76.108;
-deny 45.155.76.226;
+deny 45.61.136.220;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -2014,6 +2011,7 @@ deny 93.99.104.18;
 deny 93.99.104.194;
 deny 93.99.104.40;
 deny 94.102.51.15;
+deny 94.131.3.2;
 deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.143.231.53;
@@ -2034,6 +2032,7 @@ deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.211.244.28;
+deny 95.216.107.148;
 deny 96.126.98.146;
 deny 96.27.198.133;
 deny 96.66.15.152;
