--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -420,6 +420,7 @@ allow 2a00:1dc0:caff:99::ecd2;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -728,8 +729,6 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
-allow 2a0f:5707:aaef:282::1;
-allow 2a0f:5707:aaef:390::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
