--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -206,6 +206,7 @@ deny 176.118.193.33;
 deny 176.124.221.200;
 deny 176.126.253.190;
 deny 176.58.100.98;
+deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.97.114.182;
 deny 176.97.114.202;
@@ -1054,7 +1055,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
-deny 23.155.8.104;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1082,7 +1082,6 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0a::f03c:95ff:fe8d:6977;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -1373,6 +1372,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
@@ -1736,7 +1736,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.249;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1937,7 +1936,7 @@ deny 8.218.9.41;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.68.49.227;
+deny 82.221.139.190;
 deny 82.85.247.254;
 deny 83.217.9.73;
 deny 83.96.213.63;
