--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -137,6 +137,7 @@ deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.172.118.57;
 deny 144.24.197.112;
+deny 146.59.35.246;
 deny 146.59.35.38;
 deny 146.70.164.210;
 deny 146.70.81.186;
@@ -961,6 +962,9 @@ deny 212.69.167.80;
 deny 212.73.134.204;
 deny 212.95.50.77;
 deny 212.95.52.76;
+deny 213.109.147.172;
+deny 213.109.147.225;
+deny 213.109.147.98;
 deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
@@ -1354,6 +1358,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1399,6 +1404,7 @@ deny 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
+deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
@@ -1696,7 +1702,10 @@ deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:11:0:216:3cff:fe10:721;
+deny 2a10:1fc0:11:0:216:3cff:fe27:a98;
 deny 2a10:1fc0:11:0:216:3cff:fe34:832a;
+deny 2a10:1fc0:11:0:216:3cff:fe57:9ec;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1738,6 +1747,8 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
 deny 45.129.84.247;
+deny 45.129.84.248;
+deny 45.129.84.249;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1799,6 +1810,7 @@ deny 45.80.158.205;
 deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.8.22.207;
+deny 45.83.104.137;
 deny 45.9.148.113;
 deny 45.94.31.180;
 deny 45.94.31.68;
@@ -1905,6 +1917,7 @@ deny 77.221.157.237;
 deny 77.221.159.184;
 deny 77.221.159.189;
 deny 77.221.159.192;
+deny 77.221.159.193;
 deny 77.221.159.75;
 deny 77.37.3.7;
 deny 77.48.28.193;
@@ -1958,6 +1971,7 @@ deny 87.118.116.103;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 88.80.20.86;
 deny 89.147.108.90;
 deny 89.147.110.118;
