Update lists at 20240924-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -657,6 +657,7 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
+allow 194.233.174.56;
 allow 194.26.192.161;
 allow 194.26.192.77;
 allow 194.62.248.21;
@@ -1437,6 +1438,7 @@ allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
+allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1734,7 +1736,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1899,6 +1900,7 @@ allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
 allow 77.221.159.192;
+allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.37.3.7;
 allow 77.48.28.193;
