--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -657,6 +657,7 @@ set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.164.122.21;
+set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.62.248.21;
@@ -1437,6 +1438,7 @@ set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
+set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
@@ -1734,7 +1736,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1899,6 +1900,7 @@ set_real_ip_from 77.221.157.237;
 set_real_ip_from 77.221.159.184;
 set_real_ip_from 77.221.159.189;
 set_real_ip_from 77.221.159.192;
+set_real_ip_from 77.221.159.193;
 set_real_ip_from 77.221.159.75;
 set_real_ip_from 77.37.3.7;
 set_real_ip_from 77.48.28.193;
