Update lists at 20240925-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,10 +154,6 @@ allow 151.80.148.159;
 allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
-allow 154.213.185.133;
-allow 154.213.185.165;
-allow 154.213.185.183;
-allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
@@ -290,6 +286,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1451,10 +1448,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
-allow 2a05:b0c7:6388::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
@@ -1681,6 +1674,7 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:89c::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -2021,6 +2015,7 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.247;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
