--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -195,6 +196,7 @@ allow 172.105.161.162;
 allow 172.232.173.127;
 allow 172.234.120.235;
 allow 172.234.228.174;
+allow 172.235.39.204;
 allow 172.236.53.181;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -213,8 +215,6 @@ allow 176.97.114.202;
 allow 178.17.170.144;
 allow 178.17.170.215;
 allow 178.17.170.23;
-allow 178.17.170.53;
-allow 178.17.170.79;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -385,7 +385,6 @@ allow 185.220.101.163;
 allow 185.220.101.164;
 allow 185.220.101.165;
 allow 185.220.101.166;
-allow 185.220.101.167;
 allow 185.220.101.168;
 allow 185.220.101.169;
 allow 185.220.101.17;
@@ -671,6 +670,8 @@ allow 194.26.192.161;
 allow 194.26.192.77;
 allow 194.62.248.21;
 allow 195.160.220.104;
+allow 195.176.3.19;
+allow 195.176.3.20;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.242;
@@ -737,6 +738,8 @@ allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:4ba0:fff8:120::1;
+allow 2001:620:20d0::19;
+allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
@@ -1361,8 +1364,6 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:17e::c85a;
-allow 2a00:1dc0:caff:17f::4bcd;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:88::b2ec;
@@ -1377,11 +1378,13 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:7e03::f03c:95ff:fe9d:4051;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
+allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1439,7 +1442,6 @@ allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
-allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -1527,7 +1529,6 @@ allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
 allow 2a0b:f4c2:1::165;
 allow 2a0b:f4c2:1::166;
-allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::168;
 allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
@@ -1716,6 +1717,7 @@ allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.230.46.191;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.239.59;
@@ -1731,13 +1733,13 @@ allow 37.48.70.156;
 allow 38.97.116.244;
 allow 40.78.98.178;
 allow 43.157.40.39;
+allow 44.210.139.222;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1844,7 +1846,6 @@ allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
-allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.183;
@@ -1992,6 +1993,7 @@ allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
