--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -146,6 +146,7 @@ set_real_ip_from 146.70.164.210;
 set_real_ip_from 146.70.81.186;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
+set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -195,6 +196,7 @@ set_real_ip_from 172.105.161.162;
 set_real_ip_from 172.232.173.127;
 set_real_ip_from 172.234.120.235;
 set_real_ip_from 172.234.228.174;
+set_real_ip_from 172.235.39.204;
 set_real_ip_from 172.236.53.181;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
@@ -213,8 +215,6 @@ set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.215;
 set_real_ip_from 178.17.170.23;
-set_real_ip_from 178.17.170.53;
-set_real_ip_from 178.17.170.79;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
@@ -385,7 +385,6 @@ set_real_ip_from 185.220.101.163;
 set_real_ip_from 185.220.101.164;
 set_real_ip_from 185.220.101.165;
 set_real_ip_from 185.220.101.166;
-set_real_ip_from 185.220.101.167;
 set_real_ip_from 185.220.101.168;
 set_real_ip_from 185.220.101.169;
 set_real_ip_from 185.220.101.17;
@@ -671,6 +670,8 @@ set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.62.248.21;
 set_real_ip_from 195.160.220.104;
+set_real_ip_from 195.176.3.19;
+set_real_ip_from 195.176.3.20;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.242;
@@ -737,6 +738,8 @@ set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:4ba0:fff8:120::1;
+set_real_ip_from 2001:620:20d0::19;
+set_real_ip_from 2001:620:20d0::20;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
@@ -1361,8 +1364,6 @@ set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
-set_real_ip_from 2a00:1dc0:caff:17e::c85a;
-set_real_ip_from 2a00:1dc0:caff:17f::4bcd;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:88::b2ec;
@@ -1377,11 +1378,13 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
+set_real_ip_from 2a01:7e03::f03c:95ff:fe9d:4051;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
+set_real_ip_from 2a02:842b:821a:1801::abcd;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
@@ -1439,7 +1442,6 @@ set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
-set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
@@ -1527,7 +1529,6 @@ set_real_ip_from 2a0b:f4c2:1::163;
 set_real_ip_from 2a0b:f4c2:1::164;
 set_real_ip_from 2a0b:f4c2:1::165;
 set_real_ip_from 2a0b:f4c2:1::166;
-set_real_ip_from 2a0b:f4c2:1::167;
 set_real_ip_from 2a0b:f4c2:1::168;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
@@ -1716,6 +1717,7 @@ set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.230.46.191;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.239.59;
@@ -1731,13 +1733,13 @@ set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 40.78.98.178;
 set_real_ip_from 43.157.40.39;
+set_real_ip_from 44.210.139.222;
 set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1844,7 +1846,6 @@ set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
-set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.183;
@@ -1992,6 +1993,7 @@ set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.8.245.134;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
