--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -201,6 +201,7 @@ deny 172.234.120.235;
 deny 172.234.228.174;
 deny 172.81.131.110;
 deny 172.81.131.111;
+deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
 deny 173.0.3.111;
@@ -289,7 +290,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -1058,6 +1058,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1085,6 +1086,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0a::f03c:95ff:fe8d:6977;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -1658,6 +1660,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
@@ -1803,6 +1806,7 @@ deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.9.148.113;
+deny 45.94.31.180;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.223;
@@ -1941,6 +1945,7 @@ deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.247.165.51;
 deny 84.252.120.163;
+deny 84.252.121.147;
 deny 85.17.9.83;
 deny 85.239.41.130;
 deny 85.93.218.204;
