Update lists at 20240930-1200

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -220,7 +220,6 @@ deny 2605:6400:30:f414:42ce:c612:dab8:1337;
 deny 2605:6400:30:f440:757e:adf1:55f7:5a31;
 deny 2605:6400:30:f44f:1::;
 deny 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
-deny 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 deny 2605:6400:30:f503::1;
 deny 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 deny 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
@@ -400,6 +399,7 @@ deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
+deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1b88:4::2;
@@ -704,6 +704,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
+deny 2a0c:2500:571:3b8:e28b:b891:d56b:963a;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
