Update lists at 20240930-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -32,6 +32,7 @@ allow 104.244.78.162;
 allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
+allow 104.244.79.61;
 allow 107.172.31.218;
 allow 107.174.138.172;
 allow 107.189.10.175;
@@ -118,6 +119,8 @@ allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
+allow 130.0.233.34;
+allow 130.0.236.83;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 136.244.111.163;
@@ -140,6 +143,7 @@ allow 144.24.197.112;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
+allow 146.70.198.38;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
@@ -515,6 +519,8 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.236;
+allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -1173,6 +1179,7 @@ allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f44f:1::;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
+allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
@@ -1356,6 +1363,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1744,7 +1752,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1805,7 +1812,6 @@ allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
-allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1847,7 +1853,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1956,6 +1961,7 @@ allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 89.147.108.90;
 allow 89.147.110.118;
