--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1026,9 +1026,6 @@ allow 23.130.136.194;
 allow 23.130.136.195;
 allow 23.137.248.100;
 allow 23.137.250.83;
-allow 23.137.253.108;
-allow 23.137.253.110;
-allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
@@ -1094,9 +1091,6 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:19:2b4::1;
-allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -1374,6 +1368,7 @@ allow 2a00:1dc0:caff:88::b2ec;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:99::ecd2;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:da00:f23c:3500::1;
 allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c311::1;
@@ -1387,7 +1382,6 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
-allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1808,6 +1802,7 @@ allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1914,6 +1909,7 @@ allow 77.37.3.7;
 allow 77.48.28.193;
 allow 77.48.28.237;
 allow 77.48.28.239;
+allow 77.68.16.129;
 allow 77.81.247.72;
 allow 77.83.246.112;
 allow 77.91.85.147;
@@ -1935,7 +1931,6 @@ allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
@@ -2001,7 +1996,6 @@ allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
