--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1026,9 +1026,6 @@ deny 23.130.136.194;
 deny 23.130.136.195;
 deny 23.137.248.100;
 deny 23.137.250.83;
-deny 23.137.253.108;
-deny 23.137.253.110;
-deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
@@ -1094,9 +1091,6 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:19:2b4::1;
-deny 2602:fc24:19:30::1;
-deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -1374,6 +1368,7 @@ deny 2a00:1dc0:caff:88::b2ec;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:99::ecd2;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:da00:f23c:3500::1;
 deny 2a00:da00:f23d:8f00::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c311::1;
@@ -1387,7 +1382,6 @@ deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
-deny 2a02:842b:821a:1801::abcd;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
@@ -1808,6 +1802,7 @@ deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.9.148.113;
+deny 45.94.31.180;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.223;
@@ -1914,6 +1909,7 @@ deny 77.37.3.7;
 deny 77.48.28.193;
 deny 77.48.28.237;
 deny 77.48.28.239;
+deny 77.68.16.129;
 deny 77.81.247.72;
 deny 77.83.246.112;
 deny 77.91.85.147;
@@ -1935,7 +1931,6 @@ deny 82.153.138.119;
 deny 8.218.9.41;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.139.190;
 deny 82.68.49.227;
 deny 82.85.247.254;
 deny 83.217.9.73;
@@ -2001,7 +1996,6 @@ deny 92.246.138.145;
 deny 92.246.84.133;
 deny 93.123.12.112;
 deny 93.185.165.211;
-deny 93.8.245.134;
 deny 93.95.228.125;
 deny 93.95.228.205;
 deny 93.95.230.165;
