--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -136,9 +136,6 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:19:2b4::1;
-deny 2602:fc24:19:30::1;
-deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -415,6 +412,7 @@ deny 2a00:1dc0:caff:88::b2ec;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:99::ecd2;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:da00:f23c:3500::1;
 deny 2a00:da00:f23d:8f00::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c311::1;
@@ -428,7 +426,6 @@ deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
-deny 2a02:842b:821a:1801::abcd;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
