Update lists at 20241001-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -141,6 +141,9 @@ deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
+deny 2604:2dc0:101:100::1bb;
+deny 2604:2dc0:101:100::290;
+deny 2604:2dc0:101:100::794;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
